--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   <p>We got it covered from wireframes to animation.</p>
                </div>
             </div>
-         
+
          </div>
       </div>
    </section>
@@ -561,7 +561,18 @@
       </div>
    </section>
    <!-- Team ends -->
+   <section class="lets__talk">
+      <div class="wrap">
+         <div class="text__wrap">
+            <div class="text d-flex">
+               <span class="mr-3">Let's Talk</span>
+               <span class="mr-3">Let's Talk</span>
+               <span class="mr-3">Let's Talk</span>
+            </div>
 
+         </div>
+      </div>
+   </section>
    <!-- News-->
    <section id="newsfeed" class="padding">
       <div class="container">
